[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/enemies/slimeBlue_blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/slimeBlue_squashed.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemies/slimeBlue.png" type="Texture" id=3]
[ext_resource path="res://enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "squarshed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.375, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.375, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.875, 10.375 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.25 )
shape = SubResource( 2 )
one_way_collision_margin = 0.0

[node name="floor_checker" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -9.75 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( 0, 6.75 )
shape = SubResource( 4 )

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
